@@ -3,6 +3,8 @@ Version 5.1.8
     value doesn't come in as a server variable   
   - implemented Disposable pattern on MySqlTransaction class so including one in a using statement
     and then not calling commit will cause a rollback when the using exits (bug #39817)
+  - fixed problem that caused in use connection strings to be modified when a pooled connection
+    timed out and was cancelled.  (bug #40091)
 
 Version 5.1.7 - 8/20/08
  - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
